# bc

./: .dockerignore  .env.example  .gitignore  3个号码玩法规则说明.md  5个玩法规则说明.md  AGENTS.md  Dockerfile  TODO.md  docker-compose.ghcr.yml  docker-compose.yml  架构设计.md  部署说明.md
backend/: Cargo.toml
backend/migrations/: 20260602150315_create_lotteries.sql  20260602165000_add_lottery_play_configs.sql  20260603143000_create_state_documents.sql  20260603152000_create_business_tables.sql  20260603180500_add_scheduler_skip_details.sql  20260603192000_seed_draw_sources.sql  20260603234000_add_all_column_comments.sql  20260604090000_add_user_access_tables.sql  20260604130000_add_lottery_category.sql  20260604202000_add_lottery_logo_url.sql  20260605000000_add_lottery_categories_table.sql  20260605001000_update_lottery_number_type_check.sql  20260605002000_remove_deprecated_fast_three_lotteries.sql  20260605003000_remove_deprecated_bjkl8_lottery.sql  20260605004000_create_advertisements.sql  20260605005000_default_lotteries_closed.sql  20260605006000_create_recharge_orders.sql  20260605007000_create_withdrawal_orders.sql  20260605008000_update_withdrawal_ledger_kind_comment.sql  20260605009000_hash_login_session_tokens.sql  20260605143000_extend_group_buy_user_flow.sql  20260605161000_add_group_buy_order_id.sql  20260605164000_clear_seeded_image_bed_token.sql  20260605173000_add_order_source.sql  20260605191000_add_mobile_home_featured_settings.sql  20260605220000_extend_draw_control_target.sql  20260606030000_update_recharge_rebate_ledger_kind_comment.sql  20260607001000_create_chat_hall_messages.sql  20260607172000_extend_chat_hall_red_packets.sql  20260607175500_update_red_packet_ledger_kind_comment.sql  20260608090000_add_user_avatar_url.sql  20260608091000_add_chat_hall_message_avatar_url.sql  20260609170000_extend_support_messages_image.sql  20260609213000_add_support_user_unread_count.sql  20260610192000_add_lottery_api_draw_delay.sql  20260611205000_add_lottery_issue_format.sql  20260611225000_add_api68_pl3_pl5_sources.sql  20260612194000_update_agent_rebate_withdrawal_ledger_kind_comment.sql  20260613041000_update_lottery_issue_format_default.sql  20260613110000_create_agent_applications.sql  (+35 more)
backend/src/: app.rs  error.rs  main.rs  response.rs
backend/src/domain/: advertisement.rs  agent_application.rs  auth.rs  chat_hall.rs  draw.rs  finance.rs  group_buy.rs  invite.rs  lottery.rs  mobile.rs  mod.rs  order.rs  permission.rs  play.rs  rebate.rs  recharge.rs  robot.rs  settlement.rs  support.rs  user.rs  withdrawal.rs
backend/src/routes/: admin.rs  health.rs  lottery.rs  mod.rs  openapi.rs  user.rs
backend/src/services/: access.rs  advertisement.rs  agent_application.rs  automation.rs  business_database.rs  chat_hall.rs  dashboard.rs  draw.rs  draw_api.rs  draw_avoidance.rs  draw_generation.rs  draw_risk.rs  draw_settlement_queue.rs  finance.rs  group_buy.rs  group_buy_flow.rs  invite.rs  (+20 more)
mobile/src-tauri/: Cargo.toml  tauri.conf.json
(+372 files in other folders)
